path issue fixed

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
 
         <!-- page logo -->
         <a href="/" class="brand">
-            <img src="/assets/images/turing-logo.svg" alt="{{ site.title }}">
+            <img src="{{ site.baseurl }}/assets/images/turing-logo.svg" alt="{{ site.title }}">
             <span>{{ site.title }}</span>
         </a>
 
