image path issue fix

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,8 +33,7 @@ a {
   background-repeat: no-repeat;
   background-position: bottom; 
   background-size: 100% 70%;
-  color: #FFF; 
-  background-image: url("/assets/images/turing-logo-wide.svg");}
+  color: #FFF; }
   .home-page .jumbotron .left {
     margin: 0px -15px; }
     .home-page .jumbotron .left h1 {
