--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- the section under banner updater -->
-<div class="jumbotron">
+<div class="jumbotron" style="background-image: url('{{ site.baseurl }}/assets/images/turing-logo-wide.svg');">
   <div class="container">
     <div class="col-md-6 col-sm-6 col-xs-0"></div>
     <div class="left col-md-6 col-sm-6 col-xs-12">
