--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,7 +11,7 @@
 
         <!-- page logo -->
         <a href="/" class="brand">
-            <img src="/assets/images/turing-logo.svg" alt="{{ site.title }}">
+            <img src="{{site.baseurl }}/assets/images/turing-logo.svg" alt="{{ site.title }}">
             <span>{{ site.title }}</span>
         </a>
 
@@ -19,9 +19,9 @@
         <div class="drowDownMenu">
             <!-- pages list auto -->
             <ul class="pages nav navbar-nav navbar-left"> 
-                <li><a href="/">Get Started</a></li>
-                <li><a href="/docs/">Documentation</a></li>
-                <li><a href="/">Tutorials</a></li>
+                <li><a href="{{site.baseurl }}/">Get Started</a></li>
+                <li><a href="{{site.baseurl }}/docs/">Documentation</a></li>
+                <li><a href="{{site.baseurl }}/">Tutorials</a></li>
             </ul>
             
             <!-- search and download button container -->
