--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <meta name="generator" content="Jekyll v3.8.6" />
     <meta name="description" content="{{ site.description }}" />
     <link rel="canonical" href="{{ site.url }}" />
-    <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
+    <link rel="icon" href="{{ site.baseurl }}/assets/icons/favicon.ico">
 
     <meta property="og:title" content="{{ site.title }}" />
     <meta property="og:locale" content="en_US" />    
