--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -4,7 +4,7 @@ $back1 : #e3e3e3;
 $back2 : #373277;
 
 h1, h2, h3 {
-    font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+    font-family: "Courier New", Courier, monospace;
     font-weight: 100;
 }
 h4, .faux-h4 {
@@ -50,7 +50,7 @@ a{
             h1{
                 text-align : center;
                 font-size: 5rem;
-                font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+                font-family: "Courier New", Courier, monospace;
                 font-weight: 100;
                 color: inherit;
                 margin: .67em 0px 10px;
@@ -443,7 +443,7 @@ a{
                 background-color: #373277;
                 color: white;
                 margin: 20px 0;
-                font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+                font-family: "Courier New", Courier, monospace;
                 font-weight: 600;
                 font-size: 20px;
                 padding: 15px 35px;
@@ -481,7 +481,7 @@ a{
             font-size: 1.8rem;
             width: 240px;
             background-color: #373277;
-            font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+            font-family: "Courier New", Courier, monospace;
             font-weight: 600;
             cursor: pointer;
             &:hover{
