--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -2,7 +2,7 @@
   margin: 0px;
   border: 0px;
   flex-wrap: nowrap;
-  font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif; }
+  font-family: "Courier New", Courier, monospace; }
 
 body {
   overflow-x: none;
