--- a/assets/css/navbar.scss
+++ b/assets/css/navbar.scss
@@ -6,7 +6,7 @@ $color : #fff;
     margin : 0px;
     border : 0px;
     flex-wrap: nowrap;
-    font-family: "Segoe UI","Helvetica Neue","Helvetica",Arial,sans-serif;
+    font-family: "Courier New", Courier, monospace;
 }
 body{
     overflow-x: none;
