background & button border fix

--- a/_includes/code-sample.html
+++ b/_includes/code-sample.html
@@ -18,7 +18,7 @@
   <div class="container">
       <div class="row">
           <div class="col-sm-6 col-md-8">
-            <div class="archive__item-body">
+            <div class="archive__item-body  text-right">
               {% if f.title %}
                 <h2 class="archive__item-title">{{ f.title }}</h2>
               {% endif %}
