--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,7 +1,7 @@
 // all vars
 $color : #FFF;
 $back1 : #e3e3e3;
-$back2 : #373277;
+$back2 : #563d7c;
 
 h1, h2, h3 {
     font-family: "Courier New", Courier, monospace;
@@ -440,7 +440,7 @@ a{
             text-align: center;
             margin-top: 20px;
             .link-button {
-                background-color: #373277;
+                background-color: #563d7c;
                 color: white;
                 margin: 20px 0;
                 font-family: "Courier New", Courier, monospace;
@@ -480,7 +480,7 @@ a{
             padding: 10px 0;
             font-size: 1.8rem;
             width: 240px;
-            background-color: #373277;
+            background-color: #563d7c;
             font-family: "Courier New", Courier, monospace;
             font-weight: 600;
             cursor: pointer;
