--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!-- navbar page style -->
-<nav id="navbar" class="navbar navbar-inverse navbar-fixed-top affix-top">
+<nav id="navbar" class="navbar navbar-fixed-top affix-top">
     <div class="container">
 
         <!-- menu dropdown menu button -->
