--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -33,7 +33,6 @@ body {
   font-size: 16px;
   overflow: hidden;
   top: 0px;
-  box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.33);
   z-index: 100000; }
   #navbar .container {
     padding: 0px !important; }
@@ -68,6 +67,7 @@ body {
         opacity: 1; }
       #navbar .pages li a {
         color: #fff;
+        background-color: transparent;
         cursor: pointer;
         padding-left: 12px;
         padding-right: 12px;
@@ -77,7 +77,11 @@ body {
     list-style: none;
     display: inline-block; }
     #navbar .search-download li {
-      display: inline-block; }
+      display: inline-block; 
+    }
+    .search-download li a:hover{
+      background-color:transparent;
+    }
     #navbar .search-download .search form div {
       position: relative;
       font-size: 14px;
