--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -655,6 +655,7 @@ hr {
 }
 .md-header-nav__button.md-logo * {
     display: block;
+    margin-left: 3rem;
 }
 .no-js .md-header-nav__button.md-icon--search {
     display: none;
@@ -694,8 +695,7 @@ hr {
     display: none;
 }
 .md-header-nav__title {
-    font-size: 1.8rem;
-    line-height: 4.8rem;
+    font-size: 2rem;
 }
 
 .md-header-nav__source {
@@ -1185,6 +1185,7 @@ to {
 .md-source__icon+.md-source__repository {
     margin-left: -4.4rem;
     padding-left: 4rem;
+    color: white;
 }
 [dir=rtl] .md-source__icon+.md-source__repository {
     margin-right: -4.4rem;
@@ -2207,7 +2208,6 @@ html [dir=rtl] .md-nav__link {
 }
 .md-nav__source {
     display: block;
-    padding: 0 .4rem;
     background-color: rgba(50, 64, 144, .9675);
     color: #fff;
 }
@@ -2370,11 +2370,11 @@ html .md-nav--primary .md-nav__title--site {
 html .md-nav--primary .md-nav__title--site .md-nav__button {
     display: block;
     position: absolute;
-    top: .4rem;
-    left: .4rem;
-    width: 6.4rem;
-    height: 6.4rem;
-    font-size: 4.8rem;
+    top: 1.4rem;
+    left: 5.4rem;
+    font-size: 2.6rem;
+    color: white;
+    font-family: "Lato",-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
 }
 html .md-nav--primary .md-nav__title--site:before {
     display: none;
