--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -199,9 +199,43 @@ button:focus {
     margin-bottom: 4rem;
 }
 
+@media (min-width: 1441px){
+    .container {
+         max-width: 1300px; 
+    }
+
+    .lead p {
+        font-size: 2.4rem;
+    }
+}
+
+@media (min-width: 1600px){
+    .container {
+         max-width: 1500px; 
+    }
+}
+
+@media (min-width: 1800px){
+    .container {
+         max-width: 1600px; 
+    }
+}
+
 @media (min-width: 2000px){
     .container {
-         max-width: 1900px; 
+         max-width: 1800px; 
+    }
+}
+
+@media (min-width: 2200px){
+    .container {
+         max-width: 2000px; 
+    }
+}
+
+@media (min-width: 2400px){
+    .container {
+         max-width: 2200px; 
     }
 }
 
