--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,9 +163,8 @@ code, kbd, pre {
     margin: 1em 0;
 }
 .md-typeset h1 {
-    margin: 0 0 4rem;
     color: rgba(0, 0, 0, .54);
-    font-size: 3.125rem;
+    font-size: 4rem;
     line-height: 1.3;
 }
 .md-typeset h1, .md-typeset h2 {
@@ -443,11 +442,6 @@ hr {
     margin-right: auto;
     margin-left: auto;
 }
-@media (min-width: 2000px){
-    .md-grid {
-        max-width: 160rem; 
-    }
-}
 .md-container, .md-main {
     overflow: auto;
 }
@@ -639,11 +633,6 @@ hr {
 }
 .md-header-nav {
     padding: 0 .4rem;
-}
-@media (min-width: 2000px){
-    .md-header-nav {
-        max-width: 160rem;
-    }
 }
 .md-header-nav__button {
     position: relative;
@@ -2747,11 +2736,6 @@ html [dir=rtl] .md-nav--primary .md-nav__title--site .md-nav__button, html [dir=
     margin-right: 122rem;
     margin-left: 0;
 }
-@media (min-width: 2000px){
-    .md-sidebar--secondary {
-        margin-left: 160rem;
-    }
-}
 .md-tabs~.md-main .md-nav--primary>.md-nav__list>.md-nav__item--nested {
     font-size: 0;
     visibility: hidden;
@@ -2870,6 +2854,57 @@ tt, code, kbd, samp, pre {
 .md-source[data-md-source='github']{
     background-color: {{ site.navbarcolor }};
 }
+
+
+@media (min-width: 2000px){
+
+    .md-sidebar--secondary {
+        margin-left: 160rem;
+    }
+
+    .text-content {
+        margin-left: 3rem;
+        margin-right: 3rem;
+    }
+}
+
+@media (min-width: 1441px){
+    .md-header-nav {
+         max-width: 1300px; 
+    }
+}
+
+@media (min-width: 1600px){
+    .md-header-nav {
+         max-width: 1500px; 
+    }
+}
+
+@media (min-width: 1800px){
+    .md-header-nav {
+         max-width: 1600px; 
+    }
+}
+
+@media (min-width: 2000px){
+    .md-header-nav {
+         max-width: 1800px; 
+    }
+}
+
+@media (min-width: 2200px){
+    .md-header-nav {
+         max-width: 2000px; 
+    }
+}
+
+@media (min-width: 2400px){
+    .md-header-nav {
+         max-width: 2200px; 
+    }
+}
+
+
 /*# sourceMappingURL=data:application/json;
     charset=utf-8;
     base64, eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJhc3NldHMvc3R5bGVzaGVldHMvYXBwbGljYXRpb24uYmEwZmQxYTYuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
