--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2363,7 +2363,7 @@ html .md-nav--primary .md-nav__title--site .md-nav__button {
     top: 1.4rem;
     left: 5.4rem;
     font-size: 2.6rem;
-    color: white;
+    color: black;
     font-family: "Lato",-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
 }
 html .md-nav--primary .md-nav__title--site:before {
@@ -2379,7 +2379,6 @@ html [dir=rtl] .md-nav--primary .md-nav__title--site .md-nav__button, html [dir=
 }
 .md-nav--primary .md-nav__item {
     padding: 0;
-    border-top: .1rem solid rgba(0, 0, 0, .07);
 }
 [dir=rtl] .md-nav--primary .md-nav__item {
     padding: 0;
@@ -2401,12 +2400,10 @@ html [dir=rtl] .md-nav--primary .md-nav__title--site .md-nav__button, html [dir=
     padding: 1.2rem 1.6rem;
 }
 .md-nav--primary .md-nav__link:after {
-    position: absolute;
-    top: 50%;
-    right: 1.2rem;
-    margin-top: -1.2rem;
+
     color: inherit;
     font-size: 2.4rem;
+    float: right;
 }
 [dir=rtl] .md-nav--primary .md-nav__link:after {
     right: auto;
@@ -2414,6 +2411,7 @@ html [dir=rtl] .md-nav--primary .md-nav__title--site .md-nav__button, html [dir=
 }
 .md-nav--primary .md-nav--secondary .md-nav__link {
     position: static;
+    color: black;
 }
 .md-nav--primary .md-nav--secondary .md-nav {
     position: static;
