--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2297,10 +2297,6 @@ html [dir=rtl] .md-search__inner {
 .mobile-nav {
   display: normal !important;
 }
-.md-nav--primary .md-nav__item--nested>.md-nav__link:after {
-    content: "" !important}
-[dir=rtl] .md-nav--primary .md-nav__item--nested>.md-nav__link:after {
-    content: "" !important}
 
 .md-header-nav__button.md-icon--home, .md-header-nav__button.md-logo {
     display: none;
@@ -2328,7 +2324,7 @@ html [dir=rtl] .md-search__inner {
 }
 html .md-nav--primary .md-nav__title {
     position: relative;
-    padding: 6rem 1.6rem .4rem;
+    padding: 2.4rem;
     background-color: rgba(0, 0, 0, .07);
     color: rgba(0, 0, 0, .54);
     font-weight: 400;
@@ -2360,7 +2356,7 @@ html .md-nav--primary .md-nav__title--site {
 html .md-nav--primary .md-nav__title--site .md-nav__button {
     display: block;
     position: absolute;
-    top: 1.4rem;
+    top: 0.6rem;
     left: 5.4rem;
     font-size: 2.6rem;
     color: black;
@@ -2447,12 +2443,9 @@ html [dir=rtl] .md-nav--primary .md-nav__title--site .md-nav__button, html [dir=
 }
 .md-nav__toggle~.md-nav {
     display: flex;
-    -webkit-transform: translateX(100%);
-    transform: translateX(100%);
     transition: opacity .125s .05s, -webkit-transform .25s cubic-bezier(.8, 0, .6, 1);
     transition: transform .25s cubic-bezier(.8, 0, .6, 1), opacity .125s .05s;
     transition: transform .25s cubic-bezier(.8, 0, .6, 1), opacity .125s .05s, -webkit-transform .25s cubic-bezier(.8, 0, .6, 1);
-    opacity: 0;
 }
 [dir=rtl] .md-nav__toggle~.md-nav {
     -webkit-transform: translateX(-100%);
@@ -2855,11 +2848,6 @@ tt, code, kbd, samp, pre {
 
 
 @media (min-width: 2000px){
-
-    .md-sidebar--secondary {
-        margin-left: 160rem;
-    }
-
     .text-content {
         margin-left: 3rem;
         margin-right: 3rem;
