--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,10 +29,9 @@
                 <div class="md-nav__source">
                     <a class="md-source" data-md-source="github" href="{{ site.repo }}" title="Go to repository">
                     <div class="md-source__icon">
-                      <svg height="24" viewbox="0 0 24 24" width="24">
-                      <use height="24" width="24" xlink:href="#__github"></use></svg>
-                    </div>
-                    <div class="md-source__repository">
+                        <i class="fa fa-github fa-3x"></i>
+                    </div>                    
+                    <div class="md-source__repository">                        
                       {{ site.github_user }}/{{ site.github_repo }}
                     </div></a>
                   </div>
