--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2201,6 +2201,14 @@ html [dir=rtl] .md-nav__link {
     background-color: rgba(50, 64, 144, .9675);
     color: #fff;
 }
+.md-source__icon i {
+    margin-top: 3px;
+    margin-left: 7px;
+    color: white;
+}
+.md-nav__source .md-source {
+    padding-left: 20px;
+}
 .md-search__overlay {
     position: absolute;
     top: .4rem;
