--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,7 +42,7 @@
                 {% assign paths = page.url | remove: "/docs/" | split: "/" %}
                 {% for section in site.data.toc %}
                 {% assign sectionpaths = section.url | remove: "docs/" | split: "/" %}
-                <li class="md-nav__item md-nav__item--nested">
+                <li class="md-nav__item md-nav__item--nested navbar_bottom-border">
                   <a class="md-nav__link pancakes-parent 
                   {% if sectionpaths.first == paths.first %}open-parent{% endif %}" 
                   id="pancakes-{{ section.title | slugify }}" title="{{ section.title }}">{{ section.title }}</a>
@@ -51,7 +51,7 @@
                       <ul class="md-nav__list">
                           {% for child in section.children %}
                           {% assign childs = child.url | remove: "docs/" | split: "/" %}
-                          <li class="md-nav__item">
+                          <li class="md-nav__item mobile-sub-item">
                           <a href="{% if child.external_url %}{{ child.external_url }}{% else %}{{ site.baseurl }}/{{ child.url }}{% endif %}" 
                             title="{{ child.title }}" {% if sectionpaths.first != paths.first %}style="display:none;"{% endif %}
                             {% if childs.last == paths.last %} style="color: red;"{% endif %}
