--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1175,7 +1175,7 @@ to {
 .md-source__icon+.md-source__repository {
     margin-left: -4.4rem;
     padding-left: 4rem;
-    color: white;
+    color: black;
 }
 [dir=rtl] .md-source__icon+.md-source__repository {
     margin-right: -4.4rem;
@@ -2204,7 +2204,7 @@ html [dir=rtl] .md-nav__link {
 .md-source__icon i {
     margin-top: 3px;
     margin-left: 7px;
-    color: white;
+    color: black;
 }
 .md-nav__source .md-source {
     padding-left: 20px;
@@ -2367,7 +2367,7 @@ html .md-nav--primary .md-nav__title--site .md-nav__button {
     top: 0.6rem;
     left: 5.4rem;
     font-size: 2.6rem;
-    color: black;
+    color: white;
     font-family: "Lato",-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Helvetica Neue","Lucida Grande",Arial,sans-serif;
 }
 html .md-nav--primary .md-nav__title--site:before {
@@ -2851,7 +2851,7 @@ tt, code, kbd, samp, pre {
 }
 
 .md-source[data-md-source='github']{
-    background-color: {{ site.navbarcolor }};
+    background-color: #d2e6f5;
 }
 
 
@@ -2898,6 +2898,17 @@ tt, code, kbd, samp, pre {
     }
 }
 
+.navbar_bottom-border {
+    border-bottom: 1px solid #ededed;
+}
+
+.md-nav__list .mobile-sub-item {
+    background-color:#ededed;
+}
+
+.md-nav__list .mobile-sub-item:nth-child(even) {
+    background-color: white;
+}
 
 /*# sourceMappingURL=data:application/json;
     charset=utf-8;
