--- a/_includes/editable.html
+++ b/_includes/editable.html
@@ -42,7 +42,7 @@ $(document).ready(function() {
         var start = '<div class="dropdown more"><span><i class="fa fa-ellipsis-h more" title="Edit"></i></span><div class="dropdown-content">';
 
         // Edit (assuming deployed under main organization repo)
-        var link = "{{ site.repo }}/edit/master/{{ page.path }}#" + did;
+        var link = "{{ site.repo }}/edit/master/docs/{{ page.path }}#" + did;
         var button = "<p><a href='" + link + "' target='_blank'>Edit this page</a></p>";
         start += button;
 
