--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,8 +13,7 @@
 
         <ul class="md-nav__list" data-md-scrollfix="">
           <li class="md-nav__item md-nav__item--active">
-            <input class="md-toggle md-nav__toggle" data-md-toggle="toc" id="__toc" type="checkbox" /> 
-              
+            <input class="md-toggle md-nav__toggle" data-md-toggle="toc" id="__toc" type="checkbox" />             
 
             <nav class="md-nav md-nav--secondary">
 
@@ -43,21 +42,20 @@
                 {% for section in site.data.toc %}
                 {% assign sectionpaths = section.url | remove: "docs/" | split: "/" %}
                 <li class="md-nav__item md-nav__item--nested navbar_bottom-border">
-                  <a class="md-nav__link pancakes-parent 
-                  {% if sectionpaths.first == paths.first %}open-parent{% endif %}" 
+                  <a class="md-nav__link pancakes-parent" 
                   id="pancakes-{{ section.title | slugify }}" title="{{ section.title }}">{{ section.title }}</a>
                   {% if section.children %}
-                  <nav class="md-nav">
-                      <ul class="md-nav__list">
-                          {% for child in section.children %}
-                          {% assign childs = child.url | remove: "docs/" | split: "/" %}
-                          <li class="md-nav__item mobile-sub-item">
-                          <a href="{% if child.external_url %}{{ child.external_url }}{% else %}{{ site.baseurl }}/{{ child.url }}{% endif %}" 
-                            title="{{ child.title }}" {% if sectionpaths.first != paths.first %}style="display:none;"{% endif %}
-                            {% if childs.last == paths.last %} style="color: red;"{% endif %}
-                            class="md-nav__link pancakes-child">{{ child.title }}</a>
-                          </li>{% endfor %}
-                      </ul>
+                  <nav class="md-nav md-nav--secondary invisible">
+                    <label class="md-nav__title" for="__toc">Table of contents</label>
+                    <ul class="md-nav__list" data-md-scrollfix="">
+                      {% for child in section.children %}
+                      <li class="md-nav__item navbar_bottom-border">
+                        <a class="md-nav__link" href="{{ site.baseurl }}/{{ child.url }}"
+                            id="pancakes-{{ child.title | slugify }}" 
+                            title="{{ child.title }}">{{ child.title }}</a>
+                      </li>
+                      {% endfor %}
+                    </ul>
                   </nav>
                   {% endif %}
                 </li>
