--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -108,6 +108,16 @@
         <ul id="nav-toc" class="md-nav__list" data-md-scrollfix="">
         <!-- toc will be appended here!-->
         </ul>
+        <a href="{{ site.repo }}/edit/master/docs/{{ page.path }}" title="{{ site.repo }}/edit/master/docs/{{ page.path }}" class="md-nav__title" for="__toc" style="
+            border: 2px solid #969696;
+            border-radius: 4px;
+            display: inline-block;
+            padding: 4px 16px;
+        ">
+          <i class="fa fa-github fa-1x"></i>
+          Edit me
+          <i class="fa fa-external-link"></i>
+        </a>
       </nav>
     </div>
   </div>
