--- a/_includes/headers.html
+++ b/_includes/headers.html
@@ -22,6 +22,7 @@ $(".pancakes-parent").on('click', function(){
 })
 
 $(".navbar_bottom-border .md-nav__title").on('click', function(){
+    alert("test")
     $(this).parent().removeClass('mobile-sub-navbar-display');
 })
 
