--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -113,6 +113,7 @@
             border-radius: 4px;
             display: inline-block;
             padding: 4px 16px;
+            margin-top: 2rem;
         ">
           <i class="fa fa-github fa-1x"></i>
           Edit me
