--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -822,6 +822,7 @@ html .md-footer-meta.md-typeset a:focus, html .md-footer-meta.md-typeset a:hover
     font-weight: 700;
     text-overflow: ellipsis;
     overflow: hidden;
+    cursor:pointer;
 }
 .md-nav__title:before {
     display: none;
