--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -108,13 +108,7 @@
         <ul id="nav-toc" class="md-nav__list" data-md-scrollfix="">
         <!-- toc will be appended here!-->
         </ul>
-        <a href="{{ site.repo }}/edit/master/docs/{{ page.path }}" title="{{ site.repo }}/edit/master/docs/{{ page.path }}" style="
-            border: 2px solid #969696;
-            border-radius: 4px;
-            display: inline-block;
-            padding: 4px 16px;
-            margin: 1rem 2rem;
-        ">
+        <a href="{{ site.repo }}/edit/master/docs/{{ page.path }}" title="{{ site.repo }}/edit/master/docs/{{ page.path }}"  class="edit-me-link">
           <i class="fa fa-github fa-1x"></i>
           Edit me
           <i class="fa fa-external-link"></i>
