--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,11 +42,11 @@
                 {% for section in site.data.toc %}
                 {% assign sectionpaths = section.url | remove: "docs/" | split: "/" %}
                 <li class="md-nav__item md-nav__item--nested navbar_bottom-border">
-                  <a class="md-nav__link pancakes-parent" 
+                  <a class="md-nav__link pancakes-parent-mobile" 
                   id="pancakes-{{ section.title | slugify }}" title="{{ section.title }}">{{ section.title }}</a>
                   {% if section.children %}
                   <nav class="md-nav md-nav--secondary invisible">
-                    <label class="md-nav__title" for="__toc" style="">Table of contents</label>
+                    <label class="md-nav__title mobile-navbar-back" for="__toc">Table of contents</label>
                     <ul class="md-nav__list" data-md-scrollfix="">
                       {% for child in section.children %}
                       <li class="md-nav__item navbar_bottom-border">
