--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2931,6 +2931,9 @@ tt, code, kbd, samp, pre {
     margin: 1rem 2rem;
 }
 
+.mobile-navbar-back {
+    cursor: pointer;
+}
 /*# sourceMappingURL=data:application/json;
     charset=utf-8;
     base64, eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJhc3NldHMvc3R5bGVzaGVldHMvYXBwbGljYXRpb24uYmEwZmQxYTYuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
