--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -15,7 +15,7 @@ $(document).ready(function() {
             var div_id = $(section).attr('id');
             var div_text = section.text().split('¶')[0];
             var parent = $("#" + div_id)
-            var content = '<li id="link_' + div_id + '" class="md-nav__item"><a class="md-nav__link" href="#' + div_id + '" title="' + div_text +'">' + div_text +'</a></li>';
+            var content = '<li id="link_' + div_id + '" class="md-nav__item"><a class="md-nav__link toc-side-bar" href="#' + div_id + '" title="' + div_text +'">' + div_text +'</a></li>';
             $(toc).append(content);
 
             // Add section code to subnavigation
@@ -25,7 +25,7 @@ $(document).ready(function() {
                if($(contender).is('h2')) {
                    var contender_id = $(contender).attr('id');
                    var contender_text = $(contender).text().split('¶')[0];
-                   var content = '<li class="md-nav__item"><a class="md-nav__link" href="#' + contender_id + '" title="' + contender_text +'">' + contender_text +'</a></li>';
+                   var content = '<li class="md-nav__item"><a class="md-nav__link toc-side-bar" href="#' + contender_id + '" title="' + contender_text +'">' + contender_text +'</a></li>';
                    children.append(content);
                 }
              })
