--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,8 @@
         </main>
     </div>
     
+    {% include footer.html %}
+
     <script src="{{ site.baseurl }}/assets/js/application.js"></script>
     {% assign slashes = page.url | split: "/" %}
     <script>console.log('{{ slashes | size }}')</script>
@@ -71,5 +73,6 @@
     {% include tags.html %}
     {% include scrolltop.html %}
     {% include google-analytics.html %}
+
   </body>
 </html>
