--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -108,6 +108,9 @@
         <ul id="nav-toc" class="md-nav__list" data-md-scrollfix="">
         <!-- toc will be appended here!-->
         </ul>
+        <a href="https://twitter.com/intent/tweet?original_referer={{ site.repo }}/edit/master/docs/{{ page.path }}" class="social-link"><i class="fa fa-twitter fa-1x"></i>Tweet this page</a>
+        <a href="https://discourse.julialang.org/c/domain/probprog" class="social-link"><i class="fa fa-stack-overflow fa-1x"></i>Ask questions</a>
+        <a href="{{ site.repo }}//issues/new?label=question&title=Question:&body=Question%20on:%20{{ site.repo }}/edit/master/docs/{{ page.path }}" class="social-link"><i class="fa fa-comments fa-1x"></i>Report issues</a>        
         <a href="{{ site.repo }}/edit/master/docs/{{ page.path }}" title="{{ site.repo }}/edit/master/docs/{{ page.path }}"  class="edit-me-link">
           <i class="fa fa-github fa-1x"></i>
           Edit me
