--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2947,7 +2947,7 @@ tt, code, kbd, samp, pre {
     border-radius: 4px;
     display: inline-block;
     padding: 4px 16px;
-    margin: 1rem 2rem;
+    margin: 8px 16px;
 }
 
 .social-link {
