--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2942,16 +2942,8 @@ tt, code, kbd, samp, pre {
     }
 }
 
-.edit-me-link {
-    border: 2px solid #969696;
-    border-radius: 4px;
-    display: inline-block;
-    padding: 4px 16px;
-    margin: 8px 16px;
-}
-
 .social-link {
-    display: inline-block;
+    display: block;
     padding: 4px 16px;
     color: #0072be;    
 }
